--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,1 +1,65 @@
-/* No CSS *//*# sourceMappingURL=Home.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+.home-container {
+  width: 100vw;
+  height: 100vh;
+  background-color: #232931;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.home-container .home-titles-container {
+  width: 480px;
+  z-index: 2;
+  position: absolute;
+  margin-bottom: 230px;
+  margin-left: 100px;
+}
+
+.home-container .home-titles-container .line-wrap {
+  overflow: hidden;
+}
+
+.home-container .home-titles-container .line-wrap .line {
+  height: 35px;
+  text-align: left;
+}
+
+.home-container .home-titles-container .line-wrap .line .home-title-1 {
+  color: #eeeeee;
+  font-family: "Roboto", sans-serif;
+  font-size: 70px;
+  font-weight: 500;
+  padding: 2px;
+  margin: 2px auto;
+}
+
+.home-container .home-titles-container .line-wrap .line .home-title-1 .chase {
+  -webkit-transition: all 600ms;
+  transition: all 600ms;
+}
+
+.home-container .home-titles-container .line-wrap .line .home-title-1 .chase:hover {
+  color: #4ecca3;
+}
+
+.home-container .home-titles-container .line-wrap .line .home-title-2 {
+  color: #eeeeee;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  margin-left: 7px;
+  font-weight: 400;
+}
+
+.home-container .home-titles-container .line-wrap .line .home-title-2 .i-am-a {
+  color: #4ecca3;
+  font-size: 18px;
+  margin-right: 8px;
+  font-weight: 700;
+  opacity: 0.8;
+}
+/*# sourceMappingURL=Home.css.map */
