--- a/src/SassGlobals/_variables.scss
+++ b/src/SassGlobals/_variables.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 $darkMetal: #232931;
 $lightMetal: #393e46;
-$lightBlue: #4ecca3;
+$blu: #4ecca3;
 $whiteish: #eeeeee;
+$roboto: 'Roboto', sans-serif;
