--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap");
 .home-container {
   width: 100vw;
   height: 100vh;
@@ -9,15 +10,14 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow: hidden;
   position: relative;
 }
 
 .home-container .home-titles-container {
-  width: 480px;
+  width: 560px;
   z-index: 2;
   position: absolute;
-  margin-bottom: 230px;
-  margin-left: 100px;
 }
 
 .home-container .home-titles-container .line-wrap {
@@ -26,12 +26,12 @@
 
 .home-container .home-titles-container .line-wrap .line {
   height: 35px;
-  text-align: left;
+  text-align: center;
 }
 
 .home-container .home-titles-container .line-wrap .line .home-title-1 {
   color: #eeeeee;
-  font-family: "Roboto", sans-serif;
+  font-family: "Recursive", sans-serif;
   font-size: 70px;
   font-weight: 500;
   padding: 2px;
@@ -49,9 +49,10 @@
 
 .home-container .home-titles-container .line-wrap .line .home-title-2 {
   color: #eeeeee;
-  font-family: "Roboto", sans-serif;
+  font-family: "Recursive", sans-serif;
   font-size: 20px;
   margin-left: 7px;
+  margin-top: 20px;
   font-weight: 400;
 }
 
@@ -61,5 +62,189 @@
   margin-right: 8px;
   font-weight: 700;
   opacity: 0.8;
+}
+
+.home-container .part1 {
+  -webkit-animation: part1 1s ease;
+          animation: part1 1s ease;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  transform-box: fill-box;
+}
+
+@-webkit-keyframes part1 {
+  0% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  50% {
+    -webkit-transform: translateY(-2%);
+            transform: translateY(-2%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+@keyframes part1 {
+  0% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  50% {
+    -webkit-transform: translateY(-2%);
+            transform: translateY(-2%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+.home-container .part3 {
+  -webkit-animation: part3 4s ease infinite;
+          animation: part3 4s ease infinite;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  transform-box: fill-box;
+}
+
+@-webkit-keyframes part3 {
+  0% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  50% {
+    -webkit-transform: translateY(-6%);
+            transform: translateY(-6%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+@keyframes part3 {
+  0% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  50% {
+    -webkit-transform: translateY(-6%);
+            transform: translateY(-6%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+.home-container .part2 {
+  -webkit-animation: part2 20s ease infinite;
+          animation: part2 20s ease infinite;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  transform-box: fill-box;
+}
+
+@-webkit-keyframes part2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes part2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+.home-container .part4 {
+  -webkit-animation: part4 20s ease infinite;
+          animation: part4 20s ease infinite;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  transform-box: fill-box;
+}
+
+@-webkit-keyframes part4 {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes part4 {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+.home-container .part5 {
+  -webkit-animation: part5 7s ease infinite;
+          animation: part5 7s ease infinite;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  transform-box: fill-box;
+}
+
+@-webkit-keyframes part5 {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: .01;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes part5 {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: .01;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=Home.css.map */
