--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,17 +1,41 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap");
 .home-container {
   width: 100vw;
   height: 100vh;
-  background-color: #232931;
+  background-color: #08182e;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   overflow: hidden;
   position: relative;
+}
+
+.home-container .sue {
+  color: #eeeeee50;
+  font-size: 70px;
+  font-family: "Sue Ellen Francisco", cursive;
+  height: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.home-container .sue2 {
+  color: #eeeeee50;
+  font-size: 60px;
+  font-family: "Sue Ellen Francisco", cursive;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-left: 14px;
 }
 
 .home-container .home-titles-container {
@@ -25,13 +49,13 @@
 }
 
 .home-container .home-titles-container .line-wrap .line {
-  height: 35px;
-  text-align: center;
+  height: 45px;
+  text-align: left;
 }
 
 .home-container .home-titles-container .line-wrap .line .home-title-1 {
   color: #eeeeee;
-  font-family: "Recursive", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 70px;
   font-weight: 500;
   padding: 2px;
@@ -49,19 +73,12 @@
 
 .home-container .home-titles-container .line-wrap .line .home-title-2 {
   color: #eeeeee;
-  font-family: "Recursive", sans-serif;
+  font-family: "Roboto", sans-serif;
+  color: #eeeeee80;
   font-size: 20px;
   margin-left: 7px;
   margin-top: 20px;
   font-weight: 400;
-}
-
-.home-container .home-titles-container .line-wrap .line .home-title-2 .i-am-a {
-  color: #4ecca3;
-  font-size: 18px;
-  margin-right: 8px;
-  font-weight: 700;
-  opacity: 0.8;
 }
 
 .home-container .part1 {
@@ -229,7 +246,7 @@
     opacity: 1;
   }
   50% {
-    opacity: .01;
+    opacity: 0.01;
   }
   100% {
     opacity: 1;
@@ -241,10 +258,18 @@
     opacity: 1;
   }
   50% {
-    opacity: .01;
+    opacity: 0.01;
   }
   100% {
     opacity: 1;
   }
+}
+
+.home-container .circles-ripple-container {
+  height: 400px;
+  width: 400px;
+  position: absolute;
+  top: 200;
+  right: 100;
 }
 /*# sourceMappingURL=Home.css.map */
