--- a/src/Components/SideNav/SideNav.css
+++ b/src/Components/SideNav/SideNav.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap");
 .side-nav-container {
-  background-color: #393e46;
-  height: 100vh;
+  background-color: #121f33;
+  height: 100%;
   width: 75px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -14,11 +15,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.side-nav-container .side-nav-logo-container {
-  height: 260px;
-  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .side-nav-container .side-nav-links {
@@ -36,5 +35,6 @@
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  margin: auto;
 }
 /*# sourceMappingURL=SideNav.css.map */
