--- a/src/SassGlobals/_variables.scss
+++ b/src/SassGlobals/_variables.scss
@@ -1,9 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap");
 
-$darkMetal: #232931;
-$lightMetal: #393e46;
+$darkMetal2: #232931;
+$darkMetal: #08182e;
+$lightMetal2: #393e46;
+$lightMetal: #121f33;
 $blu: #4ecca3;
 $whiteish: #eeeeee;
-$roboto: 'Roboto', sans-serif;
-$recursive: 'Recursive', sans-serif;
+$greyish: #eeeeee50;
+$roboto: "Roboto", sans-serif;
+$recursive: "Recursive", sans-serif;
+$sue: "Sue Ellen Francisco", cursive;
