--- a/src/components/SideNav/SideNav.scss
+++ b/src/components/SideNav/SideNav.scss
@@ -2,15 +2,12 @@
 
 .side-nav-container {
   background-color: $lightMetal;
-  height: 100vh;
+  height: 100%;
   width: 75px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  .side-nav-logo-container {
-    height: 260px;
-    width: 100%;
-  }
+  justify-content: center;
   .side-nav-links {
     display: flex;
     flex-direction: column;
@@ -18,5 +15,6 @@
     width: 50px;
     align-items: center;
     justify-content: space-around;
+    margin: auto;
   }
 }
