--- a/src/SassGlobals/_variables.scss
+++ b/src/SassGlobals/_variables.scss
@@ -2,10 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap");
 
-$darkMetal2: #232931;
-$darkMetal: #08182e;
+$darkMetal: #232931;
+$darkMetal: #161e29;
 $lightMetal2: #393e46;
-$lightMetal: #121f33;
+$lightMetal: #242c38;
 $blu: #4ecca3;
 $whiteish: #eeeeee;
 $greyish: #eeeeee50;
