--- a/src/SassGlobals/_variables.scss
+++ b/src/SassGlobals/_variables.scss
@@ -3,9 +3,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap");
 
 $darkMetal: #232931;
-$darkMetal: #161e29;
-$lightMetal2: #393e46;
-$lightMetal: #242c38;
+// $darkMetal: #161e29;
+$lightMetal: #393e46;
+// $lightMetal: #242c38;
 $blu: #4ecca3;
 $whiteish: #eeeeee;
 $greyish: #eeeeee50;
