--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -1,7 +1,8 @@
 @import "../../SassGlobals/variables.scss";
 
 .home-container {
-  width: 100vw;
+  width: 96vw;
+  margin-left: 4vw;
   height: 100vh;
   background-color: $darkMetal;
   display: flex;
@@ -28,18 +29,19 @@
     margin-left: 14px;
   }
   .home-titles-container {
-    width: 560px;
+    width: 860px;
     z-index: 2;
     position: absolute;
     .line-wrap {
       overflow: hidden;
+      height: 100px;
       .line {
-        height: 45px;
+        height: 185px;
         text-align: left;
         .home-title-1 {
           color: $whiteish;
           font-family: $roboto;
-          font-size: 70px;
+          font-size: 100px;
           font-weight: 500;
           padding: 2px;
           margin: 2px auto;
@@ -55,96 +57,32 @@
           font-family: $roboto;
           color: #eeeeee80;
           font-size: 20px;
-          margin-left: 7px;
-          margin-top: 20px;
+          margin-left: 10px;
+          margin-top: 25px;
           font-weight: 400;
+        }
+        .home-title-3 {
+          color: $whiteish;
+          font-family: $roboto;
+          color: #eeeeee80;
+          font-size: 20px;
+          margin-left: 10px;
+          font-weight: 400;
+          span {
+            transition: all ease 900ms;
+            &:hover {
+              cursor: pointer;
+              color: $blu;
+            }
+          }
         }
       }
     }
   }
-  .part1 {
-    animation: part1 1s ease;
-    transform-origin: center;
-    transform-box: fill-box;
-  }
-  @keyframes part1 {
-    0% {
-      transform: translateY(0%);
-    }
-    50% {
-      transform: translateY(-2%);
-    }
-    100% {
-      transform: translateY(0%);
-    }
-  }
-  .part3 {
-    animation: part3 4s ease infinite;
-    transform-origin: center;
-    transform-box: fill-box;
-  }
-  @keyframes part3 {
-    0% {
-      transform: translateY(0%);
-    }
-    50% {
-      transform: translateY(-6%);
-    }
-    100% {
-      transform: translateY(0%);
-    }
-  }
-  .part2 {
-    animation: part2 20s ease infinite;
-    transform-origin: center;
-    transform-box: fill-box;
-  }
-  @keyframes part2 {
-    0% {
-      transform: rotate(0deg);
-    }
-    50% {
-      transform: rotate(10deg);
-    }
-    100% {
-      transform: rotate(0deg);
-    }
-  }
-  .part4 {
-    animation: part4 20s ease infinite;
-    transform-origin: center;
-    transform-box: fill-box;
-  }
-  @keyframes part4 {
-    0% {
-      transform: rotate(0deg);
-    }
-    50% {
-      transform: rotate(10deg);
-    }
-    100% {
-      transform: rotate(0deg);
-    }
-  }
-  .part5 {
-    animation: part5 7s ease infinite;
-    transform-origin: center;
-    transform-box: fill-box;
-  }
-  @keyframes part5 {
-    0% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0.01;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
+
   .home-social-icons {
     height: 60px;
-    width: 270px;
+    width: 370px;
     display: flex;
     position: absolute;
     align-items: center;
