projects section almost completed

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -5,7 +5,7 @@
   width: 96vw;
   margin-left: 4vw;
   height: 100vh;
-  background-color: #232931;
+  background-color: #161e29;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
