--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -60,6 +60,7 @@
           margin-left: 10px;
           margin-top: 25px;
           font-weight: 400;
+          width: 600px;
         }
         .home-title-3 {
           color: $whiteish;
@@ -84,10 +85,11 @@
     height: 60px;
     width: 370px;
     display: flex;
-    position: absolute;
+    position: fixed;
     align-items: center;
     justify-content: space-evenly;
     top: 0;
     right: 0;
+    z-index: 10;
   }
 }
