--- a/src/SassGlobals/_variables.scss
+++ b/src/SassGlobals/_variables.scss
@@ -2,10 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap");
 
-$darkMetal: #232931;
-// $darkMetal: #161e29;
-$lightMetal: #393e46;
-// $lightMetal: #242c38;
+$darkMetal1: #232931;
+$darkMetal: #161e29;
+$lightMetal1: #393e46;
+$lightMetal: #242c38;
 $blu: #4ecca3;
 $whiteish: #eeeeee;
 $greyish: #eeeeee50;
