--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -104,15 +104,20 @@
 }
 
 .home-container .home-social-icons {
-  height: 60px;
-  width: 370px;
+  height: 230px;
+  width: 190px;
+  margin-right: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: fixed;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
