--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -82,11 +82,13 @@
   }
 
   .home-social-icons {
-    height: 60px;
-    width: 370px;
+    height: 230px;
+    width: 190px;
+    margin-right: 20px;
     display: flex;
     position: fixed;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-end;
     justify-content: space-evenly;
     top: 0;
     right: 0;
