--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -5,7 +5,7 @@
   width: 96vw;
   margin-left: 4vw;
   height: 100vh;
-  background-color: #161e29;
+  background-color: #102036;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
