--- a/src/Components/SideNav/SideNav.css
+++ b/src/Components/SideNav/SideNav.css
@@ -2,9 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap");
 .side-nav-container {
-  background-color: #242c38;
+  background-color: #2d3c53;
   height: 100%;
   width: 4vw;
+  min-width: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
