--- a/src/SassGlobals/_variables.scss
+++ b/src/SassGlobals/_variables.scss
@@ -3,12 +3,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap");
 
 $darkMetal1: #232931;
-$darkMetal: #161e29;
+$darkMetal: #102036;
 $lightMetal1: #393e46;
-$lightMetal: #242c38;
+$lightMetal: #2d3c53;
 $blu: #4ecca3;
-$whiteish: #eeeeee;
-$greyish: #eeeeee50;
+$whiteish: #dbdbdb;
+$greyish: #929292;
 $roboto: "Roboto", sans-serif;
 $recursive: "Recursive", sans-serif;
 $sue: "Sue Ellen Francisco", cursive;
