--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -5,7 +5,7 @@
   width: 96vw;
   margin-left: 4vw;
   height: 100vh;
-  background-color: #161e29;
+  background-color: #102036;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -17,5 +17,80 @@
           align-items: center;
   overflow: hidden;
   position: relative;
+}
+
+.about-container .about-body {
+  width: 1000px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.about-container .about-body .about-info, .about-container .about-body .about-contact {
+  width: 50%;
+  height: 525px;
+  border-bottom: #4ecca3 1px solid;
+}
+
+.about-container .about-body .about-info {
+  color: #dbdbdb;
+  text-align: left;
+  font-family: "Roboto", sans-serif;
+}
+
+.about-container .about-body .about-info h2 {
+  font-family: "Recursive", sans-serif;
+  font-size: 50px;
+}
+
+.about-container .about-body .about-info h4 {
+  font-family: "Roboto", sans-serif;
+  color: #4ecca3;
+}
+
+.about-container .about-body .about-info ul {
+  list-style-type: circle;
+  width: 100px;
+  -webkit-column-count: 2;
+          column-count: 2;
+  -webkit-column-gap: 220px;
+          column-gap: 220px;
+  height: 100px;
+  font-family: "Recursive", sans-serif;
+}
+
+.about-container .about-body .about-contact {
+  color: #dbdbdb;
+  font-family: "Roboto", sans-serif;
+  text-align: right;
+}
+
+.about-container .about-body .about-contact h2 {
+  font-family: "Recursive", sans-serif;
+  font-size: 50px;
+}
+
+.about-container .about-body .about-icon-container {
+  width: 100%;
+  height: 150px;
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.about-container .about-body .about-socials-container {
+  width: 100%;
+  height: 10px;
+  color: #dbdbdb;
+  font-family: "Roboto", sans-serif;
 }
 /*# sourceMappingURL=About.css.map */
