--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -4,7 +4,7 @@
 .projects-container {
   width: 96vw;
   margin-left: 4vw;
-  background-color: #161e29;
+  background-color: #102036;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -42,7 +42,7 @@
 }
 
 .projects-container .projects-body .projects-body-title-container h2 {
-  color: #eeeeee50;
+  color: #929292;
   font-family: "Recursive", sans-serif;
 }
 
@@ -65,7 +65,7 @@
 
 .projects-container .projects-body .project-body-one .project-body-one-info {
   font-family: "Roboto", sans-serif;
-  color: #eeeeee;
+  color: #dbdbdb;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,6 +81,7 @@
   height: 20%;
   font-size: 40px;
   color: #4ecca3;
+  font-family: "Recursive", sans-serif;
 }
 
 .projects-container .projects-body .project-body-one .project-body-one-info .project-body-one-about {
@@ -90,20 +91,21 @@
 
 .projects-container .projects-body .project-body-one .project-body-one-info .project-body-one-tech {
   word-spacing: 20px;
-  color: #eeeeee50;
+  color: #929292;
   font-family: "Recursive", sans-serif;
   height: 15%;
 }
 
 .projects-container .projects-body .project-body-one .project-body-one-info .project-body-one-links {
   word-spacing: 20px;
-  color: #eeeeee50;
+  color: #929292;
   font-family: "Recursive", sans-serif;
 }
 
 .projects-container .projects-body .project-body-two {
   width: 100%;
   height: 400px;
+  border-bottom: #4ecca3 solid 1px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -120,7 +122,7 @@
 
 .projects-container .projects-body .project-body-two .project-body-two-info {
   font-family: "Roboto", sans-serif;
-  color: #eeeeee;
+  color: #dbdbdb;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -138,6 +140,7 @@
   width: 100%;
   height: 20%;
   font-size: 40px;
+  font-family: "Recursive", sans-serif;
   color: #4ecca3;
 }
 
@@ -148,14 +151,14 @@
 
 .projects-container .projects-body .project-body-two .project-body-two-info .project-body-two-tech {
   word-spacing: 20px;
-  color: #eeeeee50;
+  color: #929292;
   font-family: "Recursive", sans-serif;
   height: 15%;
 }
 
 .projects-container .projects-body .project-body-two .project-body-two-info .project-body-two-links {
   word-spacing: 20px;
-  color: #eeeeee50;
+  color: #929292;
   font-family: "Recursive", sans-serif;
 }
 
@@ -164,6 +167,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 30px;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
@@ -171,11 +177,12 @@
 
 .projects-container .projects-body .project-body-extras .extra-projects-title-container {
   width: 100%;
+  height: 50px;
   text-align: left;
 }
 
 .projects-container .projects-body .project-body-extras .extra-projects-title-container h2 {
-  color: #eeeeee50;
+  color: #929292;
   font-family: "Recursive", sans-serif;
 }
 
@@ -184,7 +191,74 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 400px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.projects-container .projects-body .project-body-extras .project-thumbnails-container .project-thumbnail {
+  height: 350px;
+  width: 235px;
+  background-color: #2d3c53;
+  border-radius: 5px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.329);
+          box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.329);
+  border-bottom: #4ecca3 1px solid;
+}
+
+.projects-container .projects-body .project-body-extras .project-thumbnails-container .project-thumbnail .project-thumbnail-title-container {
+  width: 80%;
+  height: 20%;
+  color: #dbdbdb;
+  font-family: "Recursive", sans-serif;
+  text-align: left;
+}
+
+.projects-container .projects-body .project-body-extras .project-thumbnails-container .project-thumbnail .project-thumbnail-content-container {
+  width: 80%;
+  height: 50%;
+  text-align: left;
+  color: #dbdbdb;
+  font-family: "Roboto", sans-serif;
+}
+
+.projects-container .projects-body .project-body-extras .project-thumbnails-container .project-thumbnail .project-thumbnail-tech {
+  width: 80%;
+  height: 10%;
+  color: #929292;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  word-spacing: 5px;
+  font-family: "Recursive", sans-serif;
+}
+
+.projects-container .projects-body .project-body-extras .project-thumbnails-container .project-thumbnail .project-thumbnail-links-container {
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  height: 20%;
 }
 /*# sourceMappingURL=Projects.css.map */
