--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -46,6 +46,7 @@
           height: 20%;
           font-size: 40px;
           color: $blu;
+          font-family: $recursive;
         }
         .project-body-one-about {
           width: 90%;
@@ -67,6 +68,7 @@
     .project-body-two {
       width: 100%;
       height: 400px;
+      border-bottom: $blu solid 1px;
       display: flex;
       justify-content: space-evenly;
       .project-body-two-info,
@@ -85,6 +87,7 @@
           width: 100%;
           height: 20%;
           font-size: 40px;
+          font-family: $recursive;
           color: $blu;
         }
         .project-body-two-about {
@@ -107,9 +110,12 @@
     .project-body-extras {
       width: 100%;
       display: flex;
+      flex-wrap: wrap;
+      margin-top: 30px;
       justify-content: space-evenly;
       .extra-projects-title-container {
         width: 100%;
+        height: 50px;
         text-align: left;
         h2 {
           color: $greyish;
@@ -119,7 +125,50 @@
       .project-thumbnails-container {
         width: 100%;
         display: flex;
-        justify-content: space-around;
+        height: 400px;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        .project-thumbnail{
+          height: 350px;
+          width: 235px;
+          background-color: $lightMetal;
+          border-radius: 5px;
+          align-items: center;
+          display: flex;
+          flex-direction: column;
+          box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.329);
+          border-bottom: $blu 1px solid;
+          .project-thumbnail-title-container{
+            width: 80%;
+            height: 20%;
+            color: $whiteish;
+            font-family: $recursive;
+            text-align: left;
+          }
+          .project-thumbnail-content-container{
+            width: 80%;
+            height: 50%;
+            text-align: left;
+            color: $whiteish;
+            font-family: $roboto;
+          }
+          .project-thumbnail-tech{
+            width: 80%;
+            height: 10%;
+            color: $greyish;
+            display: flex;
+            word-spacing: 5px;
+            font-family: $recursive;
+          }
+          .project-thumbnail-links-container{
+            width: 80%;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            height: 20%;
+          }
+        }
       }
     }
   }
